# eve-buyback

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.coolify.yml  docker-compose.yml
backend/: .env.example  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 07757f6adc0a_pricing_rule_accepted.py  0cb01ad2fb89_rule_hub_override_and_line_hub_snapshot.py  10041312d2a3_initial_schema_characters_corporations_.py  14d2c0ed584b_appraisal_line_reprocess_breakdown.py  16685d146ad7_entry_source_gains_system_automatic_.py  1bef3dc47aeb_sde_stations_for_the_hub_picker.py  27a487acc646_ore_reprocess_pricing.py  2ace3fe1aa07_add_public_id_to_pricing_rules.py  413c217e6117_pricing_rule_folder.py  509cda97b1ab_add_market_price_cache.py  52b61153a13d_pricing_rule_compressed_only.py  54621089bc75_reconciliation_events_adr_0044_hangar_.py  5639d755bd32_buyback_config_default_accepted.py  7cb3ff91777c_structure_market_tokens.py  81914dc0785e_reconciliation_kind_gains_reprocess_hint.py  92d2c4c309dc_appraisal_contract_links.py  9b06e114f03a_instance_settings_runtime_editable_.py  9d1c7e2a4b60_structure_token_last_used_at.py  a238fb904f45_buyback_locations_and_appraisal_.py  a47995149b24_add_sde_reference_data.py  a6cb1eb62c7c_initial_postgres_schema.py  (+12 more)
backend/app/: _version.py  config.py  db.py  main.py  openapi_export.py
backend/tests/: conftest.py  helpers.py  test_admin_access.py  test_aggregates_domain.py  test_app_admin.py  test_appraisals.py  test_auth.py  test_cache.py  test_config.py  test_config_api.py  test_contracts_domain.py  test_corp_contracts.py  test_corp_esi_token.py  test_corp_roster.py  test_corporations.py  test_csrf.py  test_entitlements.py  test_esi_common.py  test_esi_contracts.py  test_esi_market.py  test_hangar.py  test_health.py  test_inventory_api.py  test_jobs.py  test_locations_api.py  test_lots_domain.py  test_lots_repo.py  test_market.py  test_market_domain.py  test_market_refresh.py  test_og.py  test_open_contract.py  test_paste_domain.py  test_payments.py  test_payments_domain.py  test_pricing_domain.py  test_reconciliation.py  test_reference_api.py  test_roles.py  test_rules_api.py  (+6 more)
(+290 files in other folders)
