[project]
name = "buyback-backend"
version = "0.1.0"
description = "EVE Online corporation buyback API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "httpx>=0.27",
    "itsdangerous>=2.2",
    "cryptography>=43",
    "aiomcache>=0.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "ruff>=0.7",
]

# No [build-system]: this is an application, not a packaged library, so uv
# installs the dependencies into the venv without trying to build `app`.

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["app"]
# SQLAlchemy runs async DB work in greenlets; without this, coverage can't trace
# the application-layer use cases that await the repositories and badly under-counts
# them. Required for an accurate number — measure with `uv run pytest --cov`.
concurrency = ["greenlet"]

[tool.coverage.report]
show_missing = true
